VERSION 0.1 BETA-8

  *  NEW FEATURE: Soundfile name in Siemens version is now configureable
  *  NEW FEATURE: Traffic and time displayed as title of the contact list screen
  *  NEW FEATURE: The chat history feature can be disabled
  *  Images are stored in one file except of different
  *  Nokia build does not include traffic monitor anymore
  *  New Module System: Traffic monitor is a module now
  
_________________________________________________________________________________
VERSION 0.2.0

  * NEW FEATURE: Type of connection is now configurable
  * NEW FEATURE: Use of CP1251 hack is now configurable
  * NEW FEATURE: System messages will get displayed
  * NEW FEATURE: Requests of authorisation can be answered
  * NEW FEATURE: Adding users by UIN is now supported
  * NEW FEATURE: There is a MIDP2 version supporting sound
  * NEW FEATURE: There is now also sound support for upcoming contacts
  * NEW FEATURE: It is now possible to search for users
  * There is no special Nokia version anymore
  * Options are handled in a different more efficient way.
  * Some bug fixes
 
________________________________________________________________________________
VERSION 0.2.1

  * Login procedure has been updated
  * Some minor optimizations
  
________________________________________________________________________________
VERSION 0.2.2

  * Bugfix: It was not possible to send an inital message to a contact
  
________________________________________________________________________________
VERSION 0.2.3

  * Added mp3 soundfile support for MIDP2 build. (Only if your device can play mp3)

________________________________________________________________________________
VERSION 0.2.4

  * NEW FEATURE: Current online status can be seen in main menu when online
  * Added Hebrew translation
  * Added back button to the status selet screen
  * Bugfix: City field is now taken itno account which searching