@@ -215,3 +215,4 @@ Contributors:
   *  Linas Gricius (Lithuanian translation)
   *  Mario B. Napoli (Italian translation)
   *  Urukalo Milan (Serbian translation)
+  *  Guy Aroshas (Hebrew translation)
